# internal/adapters/middleware/rest/swagger.json
@@ -4,7 +4,7 @@
         "description": "IdPD identity provider server API.",
         "title": "IdPD REST API",
         "contact": {
-            "url": "https://github.com/tdrn-org/totem"
+            "url": "https://github.com/tdrn-org/idpd"
         },
         "license": {
             "name": "Apache 2.0",
@@ -13,11 +13,11 @@
         "version": "1.0"
     },
     "host": "localhost:9123",
-    "basePath": "/api/v1",
+    "basePath": "/api",
     "paths": {
-        "/api/v1/info": {
+        "/api/info": {
             "get": {
-                "description": "Retrieve basic server info like version and configuration options",
+                "description": "Retrieve basic server info like version and configured options",
                 "produces": [
                     "application/json"
                 ],
@@ -38,46 +38,7 @@
                 }
             }
         },
-        "/api/v1/login": {
-            "get": {
-                "description": "Initiate the login flow using the given handler and auth request",
-                "produces": [
-                    "text/plain"
-                ],
-                "summary": "Initiate login flow",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "auth handler",
-                        "name": "handler",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "auth request id",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "302": {
-                        "description": "Redirect to Login UI",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/ping": {
+        "/api/ping": {
             "get": {
                 "description": "Ping the server to check general health",
                 "produces": [
@@ -99,6 +60,141 @@
                     }
                 }
             }
+        },
+        "/api/session": {
+            "get": {
+                "description": "Retrieve the current session information (if a session exists)",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get current session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.SessionInfo"
+                        }
+                    },
+                    "404": {
+                        "description": "no session found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Deletes the current session (if a session exists)",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete the current session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.SessionInfo"
+                        }
+                    },
+                    "404": {
+                        "description": "no session found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/session/login": {
+            "get": {
+                "description": "Retrieve the current session information (if a session exists)",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get current session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.SessionInfo"
+                        }
+                    },
+                    "404": {
+                        "description": "no session found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Initiate the authentication flow to create a new session",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create a new session",
+                "responses": {
+                    "302": {
+                        "description": "Redirect to Login UI",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/session/verify": {
+            "get": {
+                "description": "Retrieve the current session information (if a session exists)",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get current session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.SessionInfo"
+                        }
+                    },
+                    "404": {
+                        "description": "no session found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -108,6 +204,14 @@
                 "version": {
                     "description": "The server version",
                     "type": "string"
+                }
+            }
+        },
+        "rest.SessionInfo": {
+            "type": "object",
+            "properties": {
+                "strong_auth": {
+                    "type": "boolean"
                 }
             }
         }
